feat: refactor tests